# mcp-server-radar

./: CHANGELOG.md  README.md  ROADMAP.md  highstar.yaml  pyproject.toml
examples/: registry-items.json  servers.json
releases/: v0.1.0.md  v0.1.1.md  v0.2.0.md
src/mcp_server_radar/: cli.py
tests/: test_cli.py
