[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-radar"
version = "0.2.0"
description = "Scan MCP server lists into capability and risk indexes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexzhu0" }]
keywords = ["ai-tools", "mcp", "agents", "cli", "developer-tools", "llmops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development"
]

[project.scripts]
mcp-server-radar = "mcp_server_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
